# openvino

inference-engine/samples/tfbridge_ngfunc/: CMakeLists.txt  main.cpp  tf_function_ngraph_cluster_5.json
inference-engine/src/legacy_api/include/legacy/details/: ie_cnn_network_iterator.hpp
inference-engine/src/legacy_api/src/: cnn_network_impl.cpp  ie_util_internal.cpp
